apps/Jellyfin/jellyfin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        supplementalGroups:
        - 29
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - name: http
          containerPort: 8096
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: media
          mountPath: /media
          readOnly: true
        - name: sound
          mountPath: /dev/snd
      volumes:
      - name: config
        hostPath:
          path: /var/jellyfin/config
          type: DirectoryOrCreate
      - name: cache
        hostPath:
          path: /var/jellyfin/cache
          type: DirectoryOrCreate
      - name: media
        hostPath:
          path: /var/jellyfin/media
          type: DirectoryOrCreate
      - name: sound
        hostPath:
          path: /dev/snd
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
